[gd_scene load_steps=12 format=3 uid="uid://k5se46psddxg"]

[ext_resource type="Script" uid="uid://d0benfx64gf4g" path="res://scripts/settings_menu.gd" id="1_f4mfi"]
[ext_resource type="Shader" uid="uid://ce5he4kxdu6i8" path="res://assets/MainMenu.gdshader" id="1_r6d6q"]
[ext_resource type="FontFile" uid="uid://b51igss45y0cu" path="res://fonts/Jersey10-Regular.ttf" id="2_6wm04"]
[ext_resource type="LabelSettings" uid="uid://dqqfmkxgm3jbs" path="res://scenes/settings_item_label_settings.tres" id="3_6wm04"]
[ext_resource type="AudioStream" uid="uid://gl1iilfap75g" path="res://assets/confirm.ogg" id="5_gis3k"]
[ext_resource type="AudioStream" uid="uid://c40qrec50o5fs" path="res://assets/move.ogg" id="6_83j8s"]

[sub_resource type="Environment" id="Environment_f4mfi"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_es4n0"]
shader = ExtResource("1_r6d6q")
shader_parameter/base_color = Color(0.125, 0.188, 0.125, 1)
shader_parameter/scanline_intensity = 0.05
shader_parameter/scanline_frequency = 300.0
shader_parameter/noise_intensity = 0.02
shader_parameter/time_scale = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_6wm04"]
font = ExtResource("2_6wm04")
font_size = 28

[sub_resource type="LabelSettings" id="LabelSettings_f4mfi"]
font = ExtResource("2_6wm04")
font_size = 18

[sub_resource type="LabelSettings" id="LabelSettings_es4n0"]
font_size = 32

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f4mfi")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_f4mfi")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_es4n0")
layout_mode = 0
offset_right = 640.0
offset_bottom = 480.0

[node name="TitleVBox" type="VBoxContainer" parent="."]
layout_mode = 0
offset_top = -1.0
offset_right = 640.0
offset_bottom = 99.0

[node name="MenuTitleLabel" type="Label" parent="TitleVBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_6wm04")
theme_override_font_sizes/font_size = 50
text = "Settings"
horizontal_alignment = 1

[node name="Underline1" type="ColorRect" parent="TitleVBox"]
custom_minimum_size = Vector2(70, 3)
layout_mode = 2
color = Color(0.784314, 0.0627451, 0.180392, 1)

[node name="Underline2" type="ColorRect" parent="TitleVBox"]
custom_minimum_size = Vector2(60, 3)
layout_mode = 2
color = Color(0.784314, 0.0627451, 0.180392, 1)

[node name="OptionsVBox" type="VBoxContainer" parent="."]
layout_mode = 2
offset_top = 100.0
offset_right = 640.0
offset_bottom = 368.0

[node name="FullscreenHBox" type="HBoxContainer" parent="OptionsVBox"]
layout_mode = 2
alignment = 1

[node name="FullscreenOptionTitle" type="Label" parent="OptionsVBox/FullscreenHBox"]
layout_mode = 2
text = "Fullscreen"
label_settings = ExtResource("3_6wm04")
horizontal_alignment = 1

[node name="Margin" type="Control" parent="OptionsVBox/FullscreenHBox"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="FullscreenOptionValue" type="Label" parent="OptionsVBox/FullscreenHBox"]
layout_mode = 2
text = "[OFF]"
label_settings = ExtResource("3_6wm04")

[node name="MasterVolumeHBox" type="HBoxContainer" parent="OptionsVBox"]
layout_mode = 2
alignment = 1

[node name="MasterVolumeOptionTitle" type="Label" parent="OptionsVBox/MasterVolumeHBox"]
layout_mode = 2
text = "Master Volume"
label_settings = ExtResource("3_6wm04")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Margin" type="Control" parent="OptionsVBox/MasterVolumeHBox"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="MasterVolumeOptionValue" type="Label" parent="OptionsVBox/MasterVolumeHBox"]
layout_mode = 2
text = "[100%]"
label_settings = ExtResource("3_6wm04")

[node name="MainMenuHBox" type="HBoxContainer" parent="."]
layout_mode = 2
offset_top = 368.0
offset_right = 640.0
offset_bottom = 412.0
alignment = 1

[node name="MainMenuOptionTitle" type="Label" parent="MainMenuHBox"]
layout_mode = 2
text = "[ESC] Main Menu"
label_settings = SubResource("LabelSettings_6wm04")
horizontal_alignment = 1

[node name="HelpVBox" type="VBoxContainer" parent="."]
layout_mode = 2
offset_top = 416.0
offset_right = 640.0
offset_bottom = 480.0

[node name="Underline1" type="ColorRect" parent="HelpVBox"]
custom_minimum_size = Vector2(70, 3)
layout_mode = 2
color = Color(0.784314, 0.0627451, 0.180392, 1)

[node name="Underline2" type="ColorRect" parent="HelpVBox"]
custom_minimum_size = Vector2(60, 3)
layout_mode = 2
color = Color(0.784314, 0.0627451, 0.180392, 1)

[node name="Label" type="Label" parent="HelpVBox"]
layout_mode = 2
text = "Navigate with ↑ ↓ keys.
Change value with ← → "
label_settings = SubResource("LabelSettings_f4mfi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Arrow" type="Label" parent="."]
layout_mode = 0
offset_left = 102.0
offset_top = 103.0
offset_right = 130.0
offset_bottom = 148.0
rotation = 0.000127715
text = "▶"
label_settings = SubResource("LabelSettings_es4n0")

[node name="Confirm" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_gis3k")
bus = &"ReverbSFX"

[node name="Move" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_83j8s")
bus = &"ReverbSFX"
